GH-2930: Support for query cancelation for spatial property functions by creating iterators lazily.